# nonebot-plugin-ocgbot-v2

./: .gitignore  LICENSE  MANIFEST.in  README.md  pyproject.toml
.github/: FUNDING.yml
.github/workflows/: pypi-publish.yml
nonebot_plugin_ocgbot_v2/: __init__.py  cardPieChart.py  config.py  daily.py  data_update.py  guess_card.py  help.py  maiPic.py  ocg.py  priceSearch.py
nonebot_plugin_ocgbot_v2/libraries/: Card.py  FontUtil.py  Guess.py  SqliteUtils.py  charpic.py  forbideGet.py  globalMessage.py  guessManage.py  image.py  permissionManage.py  raiseCard.py  randomManage.py  searchManage.py  sendAction.py  staticvar.py  tool.py
nonebot_plugin_ocgbot_v2/plugins/: __init__.py  daily.py  data_update.py  guess_card.py
nonebot_plugin_ocgbot_v2/static/cdb/: extra_card.cdb  pre-release.cdb  test-release.cdb
nonebot_plugin_ocgbot_v2/static/decks/: deck_list.json
nonebot_plugin_ocgbot_v2/static/json/: daily_card.json  forbidden.json  nickname.json
