[project]
name = "nonebot-plugin-ocgbot-v2"
version = "0.1.1"
description = "nonebot-plugin-ocgbot-v2"
readme = "README.md"
requires-python = ">=3.8, <4.0"

[tool.poetry.dependencies]
python = ">=3.8.1,<4.0"
nonebot2 = ">=2.0.0"
nonebot-adapter-onebot = ">=2.2.3"
requests_html = ">=0.10.0"
Pillow = ">=9.5.0"
numpy = ">=1.25.0"
matplotlib = ">=3.7.1"

[tool.nonebot]
adapters = [
    { name = "OneBot V11", module_name = "nonebot.adapters.onebot.v11" }
]
dependencies = [
    "nonebot2>=2.0.0",
]
plugins = []
plugin_dirs = ["nonebot_plugin_ocgbot_v2"]
builtin_plugins = ["echo"]
